[workspace]
members = [
    ".",
    "./crates/steel_core",
    "./crates/glass",
    "./visual-tests",
]

[workspace.dependencies]
eframe = "0.30"
egui_extras = "0.30"
ecolor = "0.30"
egui_dnd = "0.11.0"

# Supporting library for rodio's "alsa-sys" dependency: librust-alsa-sys-dev
# TODO(TicClick): The fork is a workaround for Windows not respecting default audio device change.
# It can be removed along with TicClick/cpal once https://github.com/RustAudio/rodio/issues/463 is resolved.
rodio = { git = "https://github.com/TicClick/rodio.git", branch = "master" } # v0.17.3

# other dependencies

chrono = { version = "0.4.39", features = ["serde"] }
irc = "1.0.0"
irc-proto = "1.0.0"
futures = "0.3.31"
serde = "1.0.216"
serde_yaml = "0.9.34"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt"] }
thiserror = "2.0.8"
simplelog = "0.12.2"
log = "0.4.22"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
time = { version = "0.3.37", features = ["macros"] }
percent-encoding = "2.3.1"
ureq = { version = "2.12.1", features = ["json", "native-tls"] }
flate2 = "1.0.35"
tar = "0.4.43"
zip = "2.2.2"
md5 = "0.7.0"
png = "0.17.16"
winresource = "0.1.19"
winit-test = "0.2.0"


[package]
name = "steel"
version = "0.8.7"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
winresource = "0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel_core = { version = "*", path = "./crates/steel_core" }
glass = { version = "*", path = "./crates/glass", optional = true}

eframe = { workspace = true }
egui_extras = { workspace = true }
egui_dnd = { workspace = true }

chrono = { workspace = true }
irc = { workspace = true }
irc-proto = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
simplelog = { workspace = true }
log = { workspace = true }
log-panics = { workspace = true }
time = { workspace = true }
percent-encoding = { workspace = true }
ureq = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
md5 = { workspace = true }

rodio = { workspace = true }
png = { workspace = true }

winresource = { workspace = true }
serde_json = { workspace = true }
winit-test = { workspace = true }

[features]
default = []
glass = ["dep:glass"]
