[workspace]
members = [
    ".",
    "./crates/steel_core",
    "./crates/glass",
    "./visual-tests",
]

[workspace.dependencies]
eframe = "0.32"
egui_extras = "0.32"
ecolor = "0.32"
egui_dnd = "0.13.0"

# Supporting library for rodio's "alsa-sys" dependency: librust-alsa-sys-dev
# TODO(TicClick): The fork is a workaround for Windows not respecting default audio device change.
# It can be removed along with TicClick/cpal once https://github.com/RustAudio/rodio/issues/463 is resolved.
rodio = { git = "https://github.com/TicClick/rodio.git", branch = "master" } # v0.17.3

# other dependencies

chrono = { version = "0.4.41", features = ["serde"] }
irc = "1.1.0"
irc-proto = "1.1.0"
futures = "0.3.31"
serde = "1.0.219"
serde_yaml = "0.9.34"
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["rt"] }
thiserror = "2.0.12"
simplelog = "0.12.2"
log = "0.4.27"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
time = { version = "0.3.41", features = ["macros"] }
percent-encoding = "2.3.1"
ureq = { version = "3.0.12", features = ["json", "native-tls"] }
flate2 = "1.1.2"
tar = "0.4.44"
zip = "4.3.0"
md5 = "0.8.0"
png = "0.17.16"
winresource = "0.1.23"
winit-test = "0.2.0"


[package]
name = "steel"
version = "0.8.12"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
winresource = "0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel_core = { version = "*", path = "./crates/steel_core" }
glass = { version = "*", path = "./crates/glass", optional = true}

eframe = { workspace = true }
egui_extras = { workspace = true }
egui_dnd = { workspace = true }

chrono = { workspace = true }
irc = { workspace = true }
irc-proto = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
simplelog = { workspace = true }
log = { workspace = true }
log-panics = { workspace = true }
time = { workspace = true }
percent-encoding = { workspace = true }
ureq = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
md5 = { workspace = true }

rodio = { workspace = true }
png = { workspace = true }

winresource = { workspace = true }
serde_json = { workspace = true }
winit-test = { workspace = true }

[features]
default = []
glass = ["dep:glass"]
