[workspace]
members = [
    ".",
    "./crates/steel_core",
    "./crates/glass",
    "./visual-tests",
]

[workspace.dependencies]
eframe = { version = "0.34", default-features = false, features = ["glow", "wgpu", "accesskit", "default_fonts", "wayland", "x11"] }
egui_extras = "0.34"
ecolor = "0.34"
egui_dnd = "0.15.0"

# Supporting library for rodio's "alsa-sys" dependency: librust-alsa-sys-dev
# TODO(TicClick): The fork is a workaround for Windows not respecting default audio device change.
# It can be removed along with TicClick/cpal once https://github.com/RustAudio/rodio/issues/463 is resolved.
rodio = { git = "https://github.com/TicClick/rodio.git", branch = "master" } # v0.17.3

# other dependencies

chrono = { version = "0.4.44", features = ["serde"] }
irc = "1.1.0"
irc-proto = "1.1.0"
futures = "0.3.32"
serde = "1.0.228"
serde_yaml = "0.9.34"
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = ["rt"] }
thiserror = "2.0.18"
simplelog = "0.12.2"
log = "0.4.29"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
time = { version = "0.3.47", features = ["macros"] }
percent-encoding = "2.3.2"
ureq = { version = "3.3.0", features = ["json", "native-tls"] }
flate2 = "1.1.9"
tar = "0.4.45"
zip = "8.6.0"
md5 = "0.8.0"
png = "0.18.1"
parking_lot = "0.12"
winresource = "0.1.31"
winit-test = "0.2.0"


[package]
name = "steel"
version = "0.10.2"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
winresource = "0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel_core = { version = "*", path = "./crates/steel_core" }
glass = { version = "*", path = "./crates/glass", optional = true}

eframe = { workspace = true }
egui_extras = { workspace = true }
egui_dnd = { workspace = true }

chrono = { workspace = true }
irc = { workspace = true }
irc-proto = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
simplelog = { workspace = true }
log = { workspace = true }
log-panics = { workspace = true }
time = { workspace = true }
percent-encoding = { workspace = true }
ureq = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
md5 = { workspace = true }

rodio = { workspace = true }
rfd = "0.17"
png = { workspace = true }
parking_lot = { workspace = true }

# egui v0.34.0
puffin = { git = "https://github.com/EmbarkStudios/puffin", optional = true, features = ["serialization"], rev = "7e08a533f9debfb7d051547263d2ab84c666314f"}
puffin_egui = { git = "https://github.com/EmbarkStudios/puffin", optional = true, rev = "7e08a533f9debfb7d051547263d2ab84c666314f"}

winresource = { workspace = true }
serde_json = { workspace = true }
winit-test = { workspace = true }

rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2.git", rev = "8a0cfe6fd649e6dc06545c91a3fcc83ba16d8734", features = ["serialize"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
url = "2.5"
html-escape = "0.2.13"
base64 = "0.22"
egui-snow = { git = "https://github.com/TicClick/egui-snow.git", branch = "egui-0.34" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSDockTile", "NSApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }

[features]
default = []
glass = ["dep:glass"]
puffin = ["dep:puffin", "dep:puffin_egui"]

