[project]
name = "asset-pusher"
version = "0.1.0"
description = "Upload private builds and record their metadata"
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.5",
]

[project.scripts]
asset-pusher = "asset_pusher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
