[package]
name = "steel_core"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecolor = "0.25.0"
chrono = { version = "0.4.31", features = ["serde"] }
irc-proto = "0.15.0"
serde = { version = "1.0.194", features = ["serde_derive"] }
serde_yaml = "0.9.30"
tokio = { version = "1.35.1", features = ["rt"] }
thiserror = "1.0.56"
simplelog = "0.12.1"
log = "0.4.20"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
time = { version = "0.3.31", features = ["macros"] }
percent-encoding = "2.3.1"
ureq = { version = "2.9.1", features = ["json", "native-tls"] }
