[package]
name = "steel_core"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecolor = "0.28.1"
chrono = { version = "0.4.38", features = ["serde"] }
irc-proto = "1.0.0"
serde = { version = "1.0.202", features = ["serde_derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["rt"] }
thiserror = "1.0.61"
simplelog = "0.12.2"
log = "0.4.21"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
time = { version = "0.3.36", features = ["macros"] }
percent-encoding = "2.3.1"
ureq = { version = "2.9.7", features = ["json", "native-tls"] }
