[package]
name = "steel_core"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecolor = { workspace = true }
chrono = { workspace = true }
irc-proto = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
simplelog = { workspace = true }
log = { workspace = true }
log-panics ={ workspace = true }
time = { workspace = true }
percent-encoding = { workspace = true }
ureq = { workspace = true }
