[package]
name = "steel_plugin"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steel_core = { version = "0.1.0", path = "../steel_core" }

# See also: https://github.com/emilk/egui/issues/2898
eframe = { git = "https://github.com/TicClick/egui.git", branch = "ffi" }
chrono = { version = "0.4.24", features = ["serde"] }
serde = "1.0.159"
serde_yaml = "0.9.19"
simplelog = "0.12.1"
log = "0.4.17"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
time = { version = "0.3.20", features = ["macros"] }
libloading = "0.8.0"
